# xai-faf-rag-public

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  DEMO-2-WOLF-ELEPHANT.md  LICENSE  PITCH.md  README.md  SECURITY.md  VOICE-DEMO-SCRIPT.md  WOLFE-CORE.md  architecture.md  grok.md  project.faf  pyproject.toml  skills.md
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
tests/: __init__.py  conftest.py  test_integrator.py  test_performance.py
web/: package-lock.json  package.json  tsconfig.json
web/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
web/.svelte-kit/types/: route_meta_data.json
web/.svelte-kit/types/src/routes/api/ask/: $types.d.ts
web/src/: app.html
web/src/routes/: +page.svelte
web/src/routes/api/ask/: +server.ts
